--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #1a1a1a;
+    color: #ffffff;
+}
+
+
+.success-snackbar {
+    background: #4caf50 !important;
+    color: white !important;
+}
+
+.error-snackbar {
+    background: #f44336 !important;
+    color: white !important;
+}
+
+.success-snackbar .mat-simple-snackbar,
+.error-snackbar .mat-simple-snackbar {
+    color: white;
+}
+
+.success-snackbar .mat-simple-snackbar-action button,
+.error-snackbar .mat-simple-snackbar-action button {
+    color: white !important;
+}
